@@ -96,7 +96,7 @@ Ref<PageConfiguration> PageConfiguration::copy() const
 
     copy->m_mediaCaptureEnabled = this->m_mediaCaptureEnabled;
     copy->m_httpsUpgradeEnabled = this->m_httpsUpgradeEnabled;
-#if ENABLE(APP_PRIVACY_REPORT)
+#if PLATFORM(IOS_FAMILY)
     copy->m_appInitiatedOverrideValueForTesting = this->m_appInitiatedOverrideValueForTesting;
 #endif
 
